tests/NormalTests/paczka1/fuzzy1/94145947.err
Error in line 1: DKgBi A208 81,4
Error in line 2: A208 S131 58,0
Error in line 6: aW1 S131 82,6
Error in line 9: Ajr6 S973 18,2
Error in line 10: Ajr6 S131 24,2
Error in line 16: DKgBi S131 14,3
Error in line 24: 6zOWJGn S973 -1,9
Error in line 28: jiIo2LJx44v A365 63,2
Error in line 35: jiIo2LJx44v A208 92,7
